// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataThemeIcon renders in avatar mode 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circle"
  data-selenium="data-theme-icon.landuse"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
  title="Land Cover & Processes"
>
  <img
    alt="Land Cover & Processes"
    className="MuiAvatar-img"
    src="landcover.svg"
  />
</div>
`;

exports[`DataThemeIcon renders with a custom className 1`] = `
<img
  alt="Organisms, Populations, and Communities"
  className="foo"
  data-selenium="data-theme-icon.organisms"
  height={40}
  src="organisms.svg"
  title="Organisms, Populations, and Communities"
  width={40}
/>
`;

exports[`DataThemeIcon renders with custom size 1`] = `
<img
  alt="Ecohydrology"
  className={null}
  data-selenium="data-theme-icon.ecohydrology"
  height={32}
  src="ecohydrology.svg"
  title="Ecohydrology"
  width={32}
/>
`;

exports[`DataThemeIcon renders with only a theme prop 1`] = `
<img
  alt="Atmosphere"
  className={null}
  data-selenium="data-theme-icon.atmosphere"
  height={40}
  src="atmosphere.svg"
  title="Atmosphere"
  width={40}
/>
`;

exports[`DataThemeIcon renders with only a theme prop alias 1`] = `
<img
  alt="Biogeochemistry"
  className={null}
  data-selenium="data-theme-icon.biogeo"
  height={40}
  src="biogeochemistry.svg"
  title="Biogeochemistry"
  width={40}
/>
`;
